--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,6 +72,7 @@ flutter:
     - assets/images/lasac.jpeg
     - assets/images/google_logo.png
     - assets/images/lasac-bg.jpg
+    - assets/images/collage-lasac-bg.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
