--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,14 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Flutter",
+            "type": "dart",
+            "request": "launch",
+            "program": "lib/home.dart"
+        },
+
+        
+        {
             "name": "donation_app_final",
             "request": "launch",
             "type": "dart"
