--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cloud_firestore: ^5.6.11 
   firebase_auth: ^5.6.2
   google_sign_in: ^6.2.1
+  firebase_storage: ^12.4.9
+  image_picker: ^1.1.2
+  path: ^1.9.1
 
 
   # The following adds the Cupertino Icons font to your application.
