--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,6 @@ dependencies:
     sdk: flutter
   google_fonts: ^6.2.1
   table_calendar: ^3.2.0
-  fl_chart: ^1.0.0
   firebase_core: ^3.15.1
   cloud_firestore: ^5.6.11 
   firebase_auth: ^5.6.2
@@ -76,6 +75,7 @@ flutter:
     - assets/images/google_logo.png
     - assets/images/lasac-bg.jpg
     - assets/images/collage-lasac-bg.png
+    - assets/images/lasac-removed-bg.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
